# design-patterns

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  setup.py
design_patterns/behavioral/: chain_of_responsibility_handlers.py  command.py  command_query_separation.py  composite_command.py  composite_command_transfer.py  iterator.py
design_patterns/behavioral/chain_of_responsibility/: chain_of_responsibility.py
design_patterns/behavioral/command/: command.py
design_patterns/behavioral/interpreter/: intepreter.py
design_patterns/behavioral/iterator/: iterator_tree.py  iterator_words.py
design_patterns/behavioral/mediator/: mediator.py  mediator_with_events.py
design_patterns/behavioral/memento/: memento.py  memento_with_undo_and_redo.py
design_patterns/behavioral/observer/: observer.py  observer_with_dependent_properties.py  observer_with_properties.py
design_patterns/behavioral/state/: classic_state_machine.py  state.py  state_document_editing.py  state_simple_example.py  switch_based_state_machine.py
design_patterns/behavioral/strategy/: strategy.py
design_patterns/behavioral/template_method/: template_method.py  template_method_game.py
design_patterns/creational/: factory.py
design_patterns/creational/builder/: builder.py  combining_builders.py  combining_builders_with_inheritance.py
design_patterns/creational/factory/: abstract_factory.py  factory_method.py
design_patterns/creational/prototype/: prototype.py
design_patterns/creational/singleton/: capitals.txt  monostate.py  singleton_allocator.py  (+3 more)
(+14 files in other folders)
